# Alt-Kraft-test-task

./: .pre-commit-config.yaml  README.md  docker-compose.yml
consumer/: .dockerignore  Dockerfile  main.py  pyproject.toml  settings.py  test_consumer.py
producer/: .dockerignore  main.py  pyproject.toml  settings.py  test_producer.py
service/: Dockerfile  pyproject.toml
service/app/: main.py
service/app/core/: config.py  config.yml  init_app.py  logger.py
service/app/db/: mongodb.py
service/app/models/: comment.py
service/app/routers/: comments.py
service/tests/: conftest.py  docker-compose.yml  test_api.py  utils.py
