[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["ilyakochankov <ilyakochankov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.77.1" }
uvicorn = { extras = ["standard"], version = "^0.17.6" }
dynaconf = "^3.1.8"
motor = "2.5.1"
fastapi-health = "^0.4.0"
fastapi-pagination = { extras = ["motor"], version = "^0.9.3" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.3"
pytest-docker = "^0.12.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "strict"
log_cli = "False"
